* 2016.11.20 - detect OS ABI using uname -m in 'detect platform.os'

* 2016.11.19 - added possibility to skip setup during package installation
               (for example for root installation)
             - added soft:lib.ncurses
             - added "force_env_init" to dependency description to force env script execution
               (useful for LLVM plugins)

* 2016.11.18 - added LLVM plugin soft description

* 2016.11.16 - added LLVM lib and include to be able to compile plugins

* 2016.11.14 - added support to reuse preinstall scripts from other entries during package installation
             - added support for CrystaX Android NDK
             - added extra soft name customization from soft customize.py scripts
             - added soft:process-compiler-for-cmake (to compile complex projects such as Caffe with all deps via CK)

* 2016.11.11 - fixed bug: no possible not to search for installed software
               but install from packages (useful for Caffe for Android via CK)

* 2016.11.10 - skiping Android device detection during software detection (if not needed)
             - added gflags soft description
             - added glog soft description
             - added lmdb soft description
             - removed soft:lib.opencv.android and moved Android target to lib.opencv
             - added possibility to set ABI in the installation path (for Android)
             - added protobuf soft description

* 2016.11.08 - improved software detection (now can include sub-path in search)
             - can add GPGPU features to installation scripts
             - added soft:compiler.computecpp

* 2016.11.07 - added soft description 'tool.bazel' (useful to recompile Google's TensorFlow)

* 2016.11.04 - making os.getcwd() safer

* 2016.10.24 - added lib.tiny-dnn
             - fixes possible issues when installing packages for Android devices

* 2016.10.21 - added dependency on ARM WA tool if adding target machine that uses WA ...