@@ -1,0 +1,9 @@
+{
+  "actions": {}, 
+  "copyright": "See CK COPYRIGHT.txt for copyright details", 
+  "desc": "container for any result", 
+  "developer": "cTuning foundation", 
+  "developer_email": "admin@cTuning.org", 
+  "developer_webpage": "http://cTuning.org", 
+  "license": "See CK LICENSE.txt for licensing details"
+}
